--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,20 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 header {
-  background-color: #1fb61f;
+  background-color: black;
   color: #fff;
   padding: 20px;
   opacity: 0.7;
+  box-shadow: 2px 2px 4px #ff0000;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 nav ul li {
