--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,3 +1,4 @@
+@import "reset.css";
 * {
   margin: 0;
   padding: 0;
@@ -5,16 +6,17 @@
 }
 
 header {
-  background-color: #1fb61f;
+  background-color: black;
   color: #fff;
   padding: 20px;
   opacity: 0.7;
+  box-shadow: 2px 2px 4px #ff0000;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 nav ul li {
@@ -30,6 +32,85 @@ nav ul li a {
 
 nav ul li a:hover {
   color: #134baf;
+}
+
+.info {
+  display: block;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  height: 300px;
+  background: #ffffff;
+}
+.info .header {
+  background: #ff0000;
+  padding: 20px;
+  border-radius: 30% 60% 30% 70%;
+  text-align: center;
+  justify-content: center;
+  height: 280px;
+  width: auto;
+  box-shadow: 2px 2px 4px #000000;
+}
+.info .header h1 {
+  color: black;
+  font-size: 70px;
+  margin: 0;
+  padding-top: 40px;
+}
+
+.foodInfo {
+  width: auto;
+  padding: 40px;
+  font-size: 18px;
+  color: #232222;
+  line-height: 25px;
+  background: #ffffff;
+}
+
+.foodInfo p {
+  text-align: center;
+}
+
+.foodInfo li {
+  max-width: 700px;
+}
+
+.bmi-calculator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+  width: 300px;
+  height: auto;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.bmi-calculator h2 {
+  margin-bottom: 20px;
+}
+.bmi-calculator div {
+  margin-bottom: 15px;
+  width: 100%;
+}
+.bmi-calculator div label {
+  display: inline-block;
+  width: 120px;
+  font-weight: bold;
+}
+.bmi-calculator div input[type=number] {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+.bmi-calculator div:last-child {
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
