--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@import "reset.css";
 @import "header";
+@import "information";
+@import "BmiCalculator";
