--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,33 +1,35 @@
-header {
+.nav {
   background-color: black;
   color: #fff;
   padding: 20px;
   opacity: 0.7;
   box-shadow: 2px 2px 4px #ff0000;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
 }
 
-nav ul {
+.nav ul {
   list-style: none;
   display: flex;
   justify-content: flex-start;
+  padding: 0;
+  margin: 0;
 }
 
-nav ul li {
+.nav ul li {
   margin-right: 20px;
 }
 
-nav ul li a {
+.nav ul li a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
-nav ul li a:hover {
+.nav ul li a:hover {
   color: #134baf;
 }
-
-
-
-
-
