--- a/src/scss/information.scss
+++ b/src/scss/information.scss
@@ -5,6 +5,7 @@
   align-items: center;
   height: 300px;
   background: #ffffff;
+  font-family: Arial, sans-serif;
 
   .header {
     background: #ff0000;
