--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,36 +1,43 @@
-@import "reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-header {
+.nav {
   background-color: black;
   color: #fff;
   padding: 20px;
   opacity: 0.7;
   box-shadow: 2px 2px 4px #ff0000;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
 }
 
-nav ul {
+.nav ul {
   list-style: none;
   display: flex;
   justify-content: flex-start;
+  padding: 0;
+  margin: 0;
 }
 
-nav ul li {
+.nav ul li {
   margin-right: 20px;
 }
 
-nav ul li a {
+.nav ul li a {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
-nav ul li a:hover {
+.nav ul li a:hover {
   color: #134baf;
 }
 
@@ -41,6 +48,7 @@ nav ul li a:hover {
   align-items: center;
   height: 300px;
   background: #ffffff;
+  font-family: Arial, sans-serif;
 }
 .info .header {
   background: #ff0000;
@@ -111,6 +119,51 @@ nav ul li a:hover {
 }
 .bmi-calculator div:last-child {
   margin-bottom: 0;
+}
+
+.recipeList {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  background: #ededed;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+  word-spacing: 2px;
+  letter-spacing: 1px;
+  font-size: 14px;
+  color: #555555;
+  font-family: Arial, sans-serif;
+}
+
+.list li {
+  margin-bottom: 20px;
+  padding: 10px 30px 30px;
+  border: 1px solid #050505;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.recipe-name,
+.meal-name {
+  margin: 20px;
+  font-size: 23px;
+  color: #3a3737;
+}
+
+option {
+  padding: 10px;
+  justify-content: center;
+}
+
+.list img {
+  display: flex;
+  margin: 10px auto;
+  height: auto;
 }
 
 /*# sourceMappingURL=main.css.map */
