--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -17,8 +17,7 @@
   padding: 20px;
   border-radius: 20px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-  margin: 10px auto;
-  margin-top: 100px;
+  margin: 100px auto; ;
   max-width: 800px;
 
 }
