--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,18 +3,17 @@
   color: #fff;
   padding: 20px;
   opacity: 0.7;
-  box-shadow: 2px 2px 4px #ff0000;
+  box-shadow: 6px 6px 6px #bda3a3;
   height: 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-family: Arial, sans-serif;
 }
 
 .nav ul {
   list-style: none;
   display: flex;
-  justify-content: flex-start;
   padding: 0;
   margin: 0;
 }
@@ -32,4 +31,84 @@
 
 .nav ul li a:hover {
   color: #134baf;
+}
+
+.menu-btn {
+  background-color: #111;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  display: none;
+}
+
+.menu-btn:hover {
+  background-color: #444;
+}
+
+.sidebar {
+  display: inline-block;
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: -250px;
+  background-color: #111;
+  transition: left 0.5s ease;
+  padding-top: 20px;
+  z-index:1;
+}
+
+.sidebar.open {
+  left: 0;
+}
+
+.sidebar h1 {
+  color: white;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.sidebar ul {
+  padding: 0;
+  display: block;
+
+}
+
+.sidebar ul li {
+  list-style: none;
+  margin: 20px 0;
+}
+
+.sidebar ul li a {
+  color: white;
+  font-weight: 500;
+  padding: 10px 20px;
+  display: block;
+  text-transform: capitalize;
+  text-decoration: none;
+  transition: 0.3s ease-out;
+}
+
+.sidebar ul li a:hover {
+  background-color: #575757;
+  border-radius: 5px;
+}
+
+.main-content {
+  padding: 20px;
+}
+
+@media (max-width:650px){
+  .menu-btn{
+    display: flex;
+  }
+  .nav-list li{
+    display: none;
+  }
+  .sidebar-menu-ul{
+    display: block;
+  }
 }
