--- a/src/scss/information.scss
+++ b/src/scss/information.scss
@@ -3,8 +3,7 @@
   justify-content: center;
   justify-items: center;
   align-items: center;
-  height: 300px;
-  background: #ffffff;
+  height: auto;
   font-family: Arial, sans-serif;
 
   .header {
@@ -12,7 +11,7 @@
     padding: 20px;
     text-align: center;
     justify-content: center;
-    height: 200px;
+    height: auto;
     width: auto;
     box-shadow: 2px 2px 4px #000000;
     border-radius: 0 0 10px 10px;
@@ -39,7 +38,6 @@
   text-align: center;
   border: 1px solid black;
   border-radius: 30px;
-  background: rgba(234, 234, 234, 0.37);
   box-shadow: 2px 2px 4px #000000;
 
 
