--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -10,18 +9,17 @@
   color: #fff;
   padding: 20px;
   opacity: 0.7;
-  box-shadow: 2px 2px 4px #ff0000;
+  box-shadow: 6px 6px 6px #bda3a3;
   height: 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-family: Arial, sans-serif;
 }
 
 .nav ul {
   list-style: none;
   display: flex;
-  justify-content: flex-start;
   padding: 0;
   margin: 0;
 }
@@ -41,13 +39,90 @@
   color: #134baf;
 }
 
+.menu-btn {
+  background-color: #111;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  display: none;
+}
+
+.menu-btn:hover {
+  background-color: #444;
+}
+
+.sidebar {
+  display: inline-block;
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: -250px;
+  background-color: #111;
+  transition: left 0.5s ease;
+  padding-top: 20px;
+  z-index: 1;
+}
+
+.sidebar.open {
+  left: 0;
+}
+
+.sidebar h1 {
+  color: white;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.sidebar ul {
+  padding: 0;
+  display: block;
+}
+
+.sidebar ul li {
+  list-style: none;
+  margin: 20px 0;
+}
+
+.sidebar ul li a {
+  color: white;
+  font-weight: 500;
+  padding: 10px 20px;
+  display: block;
+  text-transform: capitalize;
+  text-decoration: none;
+  transition: 0.3s ease-out;
+}
+
+.sidebar ul li a:hover {
+  background-color: #575757;
+  border-radius: 5px;
+}
+
+.main-content {
+  padding: 20px;
+}
+
+@media (max-width: 650px) {
+  .menu-btn {
+    display: flex;
+  }
+  .nav-list li {
+    display: none;
+  }
+  .sidebar-menu-ul {
+    display: block;
+  }
+}
 .info {
   display: block;
   justify-content: center;
   justify-items: center;
   align-items: center;
-  height: 300px;
-  background: #ffffff;
+  height: auto;
   font-family: Arial, sans-serif;
 }
 .info .header {
@@ -55,7 +130,7 @@
   padding: 20px;
   text-align: center;
   justify-content: center;
-  height: 200px;
+  height: auto;
   width: auto;
   box-shadow: 2px 2px 4px #000000;
   border-radius: 0 0 10px 10px;
@@ -81,7 +156,6 @@
   text-align: center;
   border: 1px solid black;
   border-radius: 30px;
-  background: rgba(234, 234, 234, 0.37);
   box-shadow: 2px 2px 4px #000000;
 }
 .foodInfoD .foodInfo li,
@@ -263,8 +337,7 @@ option {
   padding: 20px;
   border-radius: 20px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-  margin: 10px auto;
-  margin-top: 100px;
+  margin: 100px auto;
   max-width: 800px;
 }
 
